[metadata]
name = koboldterm
description = A simple terminal client for the KoboldAI API
url = https://github.com/atisharma/kobold_term
author = Ati Sharma
author_email = ati.sharma+koboldai@agalmic.ltd
keywords = koboldai
license = GPL-3
license_files = LICENSE
long_description = file: README.md


[options]
python_requires = >= 3.10
install_requires =
    hy==0.25.0
    hyrule==0.2.1
    requests
    rich
include_package_data = True
package_dir = 
packages = find:

[options.entry_points]
console_scripts =
    kbterm = koboldterm.repl:run
    koboldterm = koboldterm.repl:run

[options.packages.find]
where = 

[options.package_data]
* = *.hy
